evaluator/sources/1348482767.error
/home/ironcoders/public_html/evaluator/sources/1348482767.cpp:25:10: warning: missing terminating " character [enabled by default]
 </iframe>");
          ^
/home/ironcoders/public_html/evaluator/sources/1348482767.cpp:25:1: error: missing terminating " character
 </iframe>");
 ^
/home/ironcoders/public_html/evaluator/sources/1348482767.cpp: In function 'int main()':
/home/ironcoders/public_html/evaluator/sources/1348482767.cpp:25:1: error: expected primary-expression before '<' token
/home/ironcoders/public_html/evaluator/sources/1348482767.cpp:25:2: error: expected primary-expression before '/' token
 </iframe>");
  ^
/home/ironcoders/public_html/evaluator/sources/1348482767.cpp:25:3: error: 'iframe' was not declared in this scope
 </iframe>");
   ^
/home/ironcoders/public_html/evaluator/sources/1348482767.cpp:27:3: error: expected primary-expression before 'return'
   return 0;
   ^
/home/ironcoders/public_html/evaluator/sources/1348482767.cpp:27:3: error: expected ';' before 'return'
